--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <!-- <meta name="theme-color" content="#000000" /> -->
   <meta name="Turnip Stalker" content="Search for turnip prices!" />
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/turnip-192.png" /> -->
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="favicon/favicon.ico">
   <meta name="msapplication-TileColor" content="#da532c">
