--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="msapplication-config" content="favicon/browserconfig.xml" />
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FFFFFF" />
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1A1B1E" />
+    <meta name="theme-color" content="#FFFFFF" />
     <title>Turnip Stalker</title>
   </head>
 
